# kit2026

./: .gitignore  LICENSE  README.md
code/: .gitignore  CMakeLists.txt
code/src/: graphcol.cc  trail.h
code/src/sdvstp/: sdvstp.cc  sdvstp.h  sdvstp_gen.cc  sdvstpp.cc  standardsolution.h
code/src/util/: CNFFormula.h  SolverTypes.h  StreamBuffer.h  VariableAllocator.h
code/src/util/pb/: cardinality_encoding.cc  cardinality_encoding.h  enc_adder.cc  enc_adder.h  warners_adder.h
exercises/: ex1.tex  ex2.tex  ex3.tex  ex4.tex  ex5.tex  ex6.tex
exercises/sdvstp/: example.sdvstp  example2.sdvstp
exercises/sdvstp/benchmarks/: gen-w10-h3-rep1.sdvstp  gen-w10-h3-rep2.sdvstp  gen-w10-h3-rep3.sdvstp  gen-w10-h3-rep4.sdvstp  gen-w10-h3-rep5.sdvstp  gen-w10-h4-rep1.sdvstp  gen-w10-h4-rep2.sdvstp  gen-w10-h4-rep3.sdvstp  gen-w10-h4-rep4.sdvstp  gen-w10-h4-rep5.sdvstp  gen-w10-h5-rep1.sdvstp  gen-w10-h5-rep2.sdvstp  gen-w10-h5-rep3.sdvstp  gen-w10-h5-rep4.sdvstp  gen-w10-h5-rep5.sdvstp  gen-w10-h6-rep1.sdvstp  gen-w10-h6-rep2.sdvstp  gen-w10-h6-rep3.sdvstp  gen-w10-h6-rep4.sdvstp  gen-w10-h6-rep5.sdvstp  gen-w10-h7-rep1.sdvstp  gen-w10-h7-rep2.sdvstp  gen-w10-h7-rep3.sdvstp  gen-w10-h7-rep4.sdvstp  gen-w10-h7-rep5.sdvstp  (+445 more)
slides/: l00-commands.tex  l01-introduction.tex  l02-encodings.tex  l03-sls-dpll.tex  l04-heuristics-cdcl.tex  l05-cdcl.tex  l06-preprocessing.tex  l07-redundancy-proofs.tex  l08-parallel.tex  l09-proof-pragmatics-parallel.tex  l10-planning-model-checking.tex  l11-application-highlights.tex  l12-smt.tex  l13-maxsat.tex  references.bib  sdqbeamer.cls
(+1 files in other folders)
